# locomotive

./: .gitattributes  .gitignore  CMakeLists.txt
include/: locomotive.h  test.h
include/locomotive/: arena.h  axis.h  camera.h  components.h  engine.h  gameobject.h  input.h  inputManager.h  locomotive.h  material.h  mesh.h  meshloader.h  phong.h  scene.h  shader.h  sound.h  threadpool.h  threadpool.hpp  window.h
include/locomotive/components/: behaviour.h  camera.h  component.h  mesh.h  pointlight.h  spherecollider.h  transform.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/shaders/: phong.fs.glsl  phong.vs.glsl
src/: axis.cpp  camera.cpp  component.cpp  engine.cpp  gameobject.cpp  input.cpp  inputManager.cpp  material.cpp  mesh.cpp  meshloader.cpp  phong.cpp  pointlight.cpp  scene.cpp  shader.cpp  sound.cpp  spherecollider.cpp  test.cpp  transform.cpp  window.cpp
